--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <center>
         <h1>My Playlist</h1>
         <h2>Salam Rocky Bhai</h2>
-        <img src=".\images\salam_rocky_bhai.jpg" alt="KGF posted" width="500px" height="500px" /><br>
+        <img src="\Myplaylist\images\salam_rocky_bhai.jpg" alt="KGF posted" width="500px" height="500px" /><br>
         <audio src=".\songs\Salam_Rocky_Bhai(128k).mp3" controls></audio><br><br>
 
         <h2>Dheera Dheera</h2>
