--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <center>
         <h1>My Playlist</h1>
         <h2>Salam Rocky Bhai</h2>
-        <img src="\Myplaylist\images\salam_rocky_bhai.jpg" alt="KGF posted" width="500px" height="500px" /><br>
+        <img src=".\images\salam_rocky_bhai.jpg" alt="KGF posted" width="500px" height="500px" /><br>
         <audio src=".\songs\Salam_Rocky_Bhai(128k).mp3" controls></audio><br><br>
 
         <h2>Dheera Dheera</h2>
         <img src="\images\dheera_dheera.jpg" alt="KGF posted" width="500px" height="500px" /><br>
-        <audio src="\songs\Dheera_Dheera(128k).mp3" controls></audio><br><br>
+        <audio src=".\songs\Dheera_Dheera(128k).mp3" controls></audio><br><br>
 
         <h2>Thirboki Jeevana</h2>
         <img src="\images\thirboki_jeevana.jpg" alt="KGF posted" width="500px" height="500px" /><br>
