--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <audio src=".\songs\Salam_Rocky_Bhai(128k).mp3" controls></audio><br><br>
 
         <h2>Dheera Dheera</h2>
-        <img src="\Myplaylist\images\dheera_dheera.jpg" alt="KGF posted" width="500px" height="500px" /><br>
+        <img src=".\images\dheera_dheera.jpg" alt="KGF posted" width="500px" height="500px" /><br>
         <audio src=".\songs\Dheera_Dheera(128k).mp3" controls></audio><br><br>
 
         <h2>Thirboki Jeevana</h2>
-        <img src="\Myplaylist\images\thirboki_jeevana.jpg" alt="KGF posted" width="500px" height="500px" /><br>
+        <img src=".\images\thirboki_jeevana.jpg" alt="KGF posted" width="500px" height="500px" /><br>
         <audio src=".\songs\Thirboki_Jeevana(128k).mp3" controls></audio><br><br>
 
         <h2>Anisuthide Yako Idhu</h2>
-        <img src="\Myplaylist\images\anisuthide.jpg" alt="KGF posted" width="500px" height="500px" /><br>
+        <img src=".\images\anisuthide.jpg" alt="KGF posted" width="500px" height="500px" /><br>
         <audio src=".\songs\Anisuthide(128k).mp3" controls></audio><br><br>
 
         <h2>Katheyondu Helide</h2>
-        <img src="\Myplaylist\images\katheyonda_helide.gif" alt="KGF posted" width="500px" height="500px" /><br>
+        <img src=".\images\katheyonda_helide.gif" alt="KGF posted" width="500px" height="500px" /><br>
         <audio src=".\songs\Katheyondu_Helide__Farewell_(128k).mp3" controls></audio><br><br>
     </center>
 </body>
