--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href=".\Myplaylist\images\music_icon.png">
+    <link rel="icon" href=".\images\music_icon.png">
     <title>My PlayList</title>
 </head>
 
